# cloverpad-he-firmware

./: .gitignore  .gitmodules  README.md  platformio.ini
boards/: cloverpad_he.json
configurator/: .gitignore  Cargo.toml  README.md
configurator/app/: Cargo.toml
configurator/app/src/: app.rs  main.rs  shell.rs
configurator/core/: Cargo.toml  build.rs
configurator/core/src/: error.rs  models.rs
configurator/core/src/models/: keypad.rs
docs/: dev-environment.md  installation-guide.md
firmware/: README.md  platformio.ini
firmware/include/: configuration.h  configuration_handler.h  configuration_manager.h  constants.h  input.h  input_handler.h  keys_he.h  main.h  serial.h  serial_handler.h
firmware/include/configuration/: configuration_handler.h  he_key_configuration.h  keypad_configuration.h
firmware/include/serial/: mappers.h  serial_handler.h
firmware/include/serial/handlers/: config_commands.h  main_commands.h
firmware/lib/DigitalFilters/include/: moving_average.h
firmware/lib/Filters/src/: moving_average.cpp
firmware/lib/LUT/include/: lut.h
firmware/src/: configuration.cpp  configuration_handler.cpp  configuration_manager.cpp  input.cpp  input_handler.cpp  main.cpp  serial.cpp  serial_handler.cpp
firmware/src/configuration/: configuration_handler.cpp
firmware/src/serial/: mappers.cpp  serial_handler.cpp
firmware/src/serial/handlers/: config_commands.cpp  main_commands.cpp
firmware/test/: unity_config.h
firmware/test/test_lut/: test_lut.cpp
firmware/udev/: 99-more-more-keypad.rules
harukapad/: README.md
harukapad/firmware/: platformio.ini
harukapad/firmware/include/: constants.h
harukapad/firmware/include/configuration/: configuration_handler.h
harukapad/firmware/include/serial/: serial_handler.h
harukapad/firmware/src/configuration/: configuration_handler.cpp
harukapad/firmware/src/serial/: serial_handler.cpp
harukapad/firmware/udev/: 99-cloverpad.rules
harukapad/protocol/: README.md  protocol-commands-config.proto  protocol-commands-main.proto  protocol-commands-state.options  protocol-state.proto
include/: command_handlers.hpp  main.h  main.hpp  serial_handler.hpp  state.h  utils.h
include/configuration/: configuration_handler.h  configuration_handler.hpp  he_key_configuration.h
include/input/: cloverpad_keyboard.h  input_handler.h  input_handler.hpp
include/serial/: serial_handler.h  serial_handler.hpp
include/serial/handlers/: config_commands.h  config_commands.hpp  main_commands.h  main_commands.hpp
lib/Cloverpad/: library.json
lib/Cloverpad/include/: constants.h  constants.hpp  he_key_input.h  lerp.h  state.h  utils.h
lib/Cloverpad/include/configuration/: he_key_configuration.h  he_key_configuration.hpp  keypad_configuration.h  keypad_configuration.hpp
lib/Cloverpad/include/filters/: moving_average.h  moving_average.hpp
lib/Cloverpad/include/input/: he_key_input.h  he_key_input.hpp
lib/Cloverpad/include/lut/: reciprocal_lut.h  (+1 more)
lib/Cloverpad/src/: he_key_input.cpp
lib/LUT/include/: lut.h
minoripad/: README.md
protocol/: README.md  commands-config.options  commands-config.proto  commands-main.options  commands-main.proto  commands-state.options  commands-state.proto  commands-top-level.options  commands-top-level.proto  commands.proto  config.options  config.proto  protocol-commands-config.options  protocol-commands-config.proto  protocol-commands-keys.proto  protocol-commands-main.options  protocol-commands-main.proto  protocol-commands-state.proto  protocol-commands.proto  protocol-config.options  protocol-config.proto  protocol-state.proto  state.proto
protocol/commands/: top-level.proto
src/: command_handlers.cpp  configuration_handler.cpp  he_key_input.cpp  input_handler.cpp  main.cpp  serial_handler.cpp
src/configuration/: configuration_handler.cpp
src/input/: input_handler.cpp
src/serial/: command_handlers.cpp  mappers.cpp  serial_handler.cpp
src/serial/handlers/: config_commands.cpp  main_commands.cpp
test/test_digital_filters/: test_moving_average.cpp
test/test_he_key_input/: test_he_key_input.cpp
test/test_lerp/: test_lerp.cpp
test/test_lut/: test_lut.cpp
test/test_mappers/: test_mappers.cpp
test/test_moving_average/: test_moving_average.cpp
test/test_reciprocal_lut/: test_reciprocal_lut.cpp
test/test_utils/: test_utils.cpp
udev/: 99-cloverpad.rules
(+8 files in other folders)
