[workspace]
members = ["app", "core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jon Pacheco <jon.pacheco@tutanota.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Ace4896/more-more-keypad-software"
homepage = "https://github.com/Ace4896/more-more-keypad-software"

[workspace.dependencies]
more-more-keypad-configurator = { version = "0.1", path = "app" }
more-more-keypad-core = { version = "0.1", path = "core" }

log = "0.4"
prost = "0.12"
prost-build = "0.12"
serialport = "4.2"
thiserror = "1"

anyhow = "1"
egui = "0.24"
eframe = { version = "0.24", default-features = false }
env_logger = "0.10"
image = { version = "0.24", default-features = false }
rfd = "0.12"
