[workspace]
members = ["app", "core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jon Pacheco <jon.pacheco@tutanota.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Ace4896/cloverpad-software"
homepage = "https://github.com/Ace4896/cloverpad-software"

[workspace.dependencies]
# Keypad Dependencies
cloverpad-configurator = { version = "0.1", path = "app" }
cloverpad-core = { version = "0.1", path = "core" }

# Core Project Dependencies
log = "0.4"
prost = "0.12"
prost-build = "0.12"
serialport = "4.2"
thiserror = "1"

# Configurator Dependencies
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false }
env_logger = "0.10"
image = { version = "0.24", default-features = false }
rfd = "0.12"
rustyline = "13"
shlex = "1.2"
