[package]
name = "cloverpad-configurator"
description = "Configurator for the More More Keypad!, a 3-key analog keypad for osu!"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cloverpad-core.workspace = true

egui.workspace = true
eframe.workspace = true
eframe.features = [
    "default_fonts", # Embed the default egui fonts
    "glow",          # Use the glow rendering backend
    "wayland",       # Enable Wayland where available
]

# At the moment, we're only loading a PNG for the window icon
image.workspace = true
image.features = ["png"]

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rfd.workspace = true
rustyline.workspace = true
shlex.workspace = true
