[package]
name = "cloverpad-core"
description = "Core logic for interacting with the More More Keypad!, a 3-key analog keypad for osu!"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
log.workspace = true
prost.workspace = true
serialport.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
